tests/init-ptr-err.c
int i;
char *p = &i;
